--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ const oilClashDailyPlans = [
                 <h4>PRIORITY 3: SUPPORT (240 & 160 Oil)</h4>
                 <ul>
                     <li><strong>S-Rig 19:</strong> Smart Garrison. Only 1 player per spot.</li>
-                    <li><strong>S-Lair 05:</strong> Let DEU take it.</li>
+                    <li><strong>S-Lair 05:</strong> DEFEND against DEU. Our starting goal is 100k points.</li>
                 </ul>
                 <h4>DO NOT ATTACK: STRATEGIC BAIT</h4>
                 <p>Let enemies waste attempts on these low-value territories. DO NOT ENGAGE.</p>
@@ -248,6 +248,62 @@ const oilClashDailyPlans = [
                     <li><strong>XS-Lair 54/55/64:</strong> Let FRA take them.</li>
                     <li><strong>XS-Lair 40/43:</strong> Let DEU take them.</li>
                 </ul>
+            </div>
+        `
+    },
+    {
+        date: "September 7, 2025",
+        plan: `
+            <style>
+                .plan-section h4 { font-family: 'Luckiest Guy', cursive; color: #34d399; margin-top: 1rem; margin-bottom: 0.5rem; font-size: 1.1em;}
+                .plan-section p { margin-bottom: 0.5rem; }
+                .plan-section ul { list-style-position: inside; padding-left: 1rem; }
+                .plan-section li { margin-bottom: 0.25rem; }
+                .plan-section strong { color: #facc15; }
+            </style>
+            <div class="plan-section text-gray-300">
+                <h4>SECURE ZONES (Uncontested)</h4>
+                <ul>
+                    <li><strong>XS-Lair 54:</strong> 1 Attack ONLY.</li>
+                    <li><strong>L-Rig 08 & M-Rig 08:</strong> One player garrison ONLY.</li>
+                </ul>
+                <h4>DEFENSE ZONES</h4>
+                <ul>
+                    <li><strong>M-Lair 22:</strong> Defend vs DEU. Starting goal: 200k points.</li>
+                    <li><strong>XS-Lair 64:</strong> Defend vs FRA. Starting goal: 200k points.</li>
+                    <li><strong>XS-Lair 43:</strong> Defend vs DEU. Starting goal: 200k points.</li>
+                </ul>
+                <h4>GARRISON SUPPORT</h4>
+                <ul>
+                    <li><strong>S-Rig 21:</strong> Smart garrisoning (2 players max).</li>
+                </ul>
+                <p class="mt-4">We're doing very well for now, so let's keep playing like pros!</p>
+            </div>
+        `
+    },
+    {
+        date: "September 6, 2025",
+        plan: `
+            <style>
+                .plan-section h4 { font-family: 'Luckiest Guy', cursive; color: #34d399; margin-top: 1rem; margin-bottom: 0.5rem; font-size: 1.1em;}
+                .plan-section p { margin-bottom: 0.5rem; }
+                .plan-section ul { list-style-position: inside; padding-left: 1rem; }
+                .plan-section li { margin-bottom: 0.25rem; }
+                .plan-section strong { color: #facc15; }
+            </style>
+            <div class="plan-section text-gray-300">
+                <h4>UNCONTESTED ZONES (Minimal Action)</h4>
+                <ul>
+                    <li><strong>1 Attack ONLY:</strong> M-Lair 28 & M-Lair 30.</li>
+                    <li><strong>1 Garrison ONLY:</strong> S-Rig 23 & S-Rig 28.</li>
+                </ul>
+                <h4>BATTLEFRONTS (Smart Garrisoning)</h4>
+                <ul>
+                    <li><strong>vs DEU (2 Players Max):</strong> S-Rig 21, S-Rig 25, S-Rig 27.</li>
+                    <li><strong>vs FRA (2 Players Max):</strong> S-Rig 31, S-Rig 32.</li>
+                </ul>
+                <h4>IMPORTANT ORDERS</h4>
+                <p>This is the initial plan. Do not rush your attempts as we will adapt during the day. FullPistola has command if I am offline.</p>
             </div>
         `
     }
