--- a/index.html
+++ b/index.html
@@ -377,6 +377,49 @@ document.addEventListener('DOMContentLoaded', () => {
                 howToUse: `<p class="text-gray-300">Use the <strong class="text-emerald-400">"Power Play"</strong> menu to check the active 4-hour theme before spending any items. For maximum efficiency, try to sync your spending with tasks from other events like Alliance Duel or Turbo Turtle.</p>`,
                 rules: `<ul class="list-disc list-inside text-gray-300 space-y-2"><li>The event opens daily, with a new theme every 4 hours.</li><li>Every day, 12 players with similar Power Plant levels are grouped for ranking.</li><li>A minimum of 1 point is required to be eligible for daily ranking rewards.</li></ul>`, 
                 tip: `<p class="text-gray-300 mb-3"><strong class="text-amber-400">Pro Tip:</strong> Your primary goal is to hit the 200k point milestone in each 4-hour session. This grants you 3 chests and 6 Power Play Medals. Collecting 18 medals daily (by reaching 200k in three sessions) unlocks 3 extra daily chests.</p><p class="text-gray-300">Don't waste resources chasing the #1 rank; its reward (a single Legendary Hero Fragment) is often less valuable than top-tier rewards from Alliance Duel or Turbo Turtle. Smart resource management is better than a low-value first place.</p>`
+            },
+            { 
+                title: "Oil Clash - A Guide to Victory", 
+                simpleContent: `
+                    <style>
+                        .plan-section h4 { font-family: 'Luckiest Guy', cursive; color: #34d399; margin-top: 1rem; margin-bottom: 0.5rem; font-size: 1.1em;}
+                        .plan-section p { margin-bottom: 0.5rem; }
+                        .plan-section ul { list-style-position: inside; padding-left: 1rem; }
+                        .plan-section li { margin-bottom: 0.25rem; }
+                    </style>
+                    <div class="plan-section text-gray-300">
+                        <p>This guide summarizes our core strategy for the Oil Clash event. Read it carefully. Our success depends on every member playing with discipline and coordination. The goal is simple: maximize our <strong class="text-yellow-400">Deepsea Crude</strong> income by controlling the most valuable territories at the daily reset.</p>
+                        <h4>1. The Golden Rule: Your Attempts are Precious</h4>
+                        <p>Your most valuable resource is your daily <strong class="text-yellow-400">Challenge Attempts</strong> (8-10 per day). Every single attempt is critical. Wasting one can be the difference between winning and losing a territory.</p>
+                        <ul>
+                            <li><strong class="text-amber-400">THE GOLDEN RULE:</strong> <strong>NEVER</strong> use an attempt without coordinating with R4/R5s or following the daily battle plan.</li>
+                            <li><strong class="text-amber-400">Patience is Key:</strong> Do not rush to use your attempts at the start of the day. Wait for the situation to develop and for leaders to give clear targets.</li>
+                        </ul>
+                        <h4>2. Know Your Targets: Smart Offense</h4>
+                        <p>Not all territories are equal. We must focus our power where it matters most.</p>
+                        <ul>
+                            <li><strong class="text-amber-400">Uncontested Zones:</strong> If a territory does <strong>not</strong> border an enemy, it only needs <strong>ONE action</strong> (one attack or one garrison) to secure it for the day. It is a massive waste to hit these more than once. Check before you act.</li>
+                            <li><strong class="text-amber-400">Battlefronts:</strong> These are the contested territories bordering our enemies. This is where the daily plan will focus our main efforts.</li>
+                            <li><strong class="text-amber-400">Bait Territories (Low Value):</strong> Small territories (usually 80 Oil) are often best ignored. We may even let our enemies waste their attempts on them while we secure the more valuable rigs. <strong>If a territory is not on the daily plan, do not attack it.</strong></li>
+                        </ul>
+                        <h4>3. The Art of the Garrison: Defend Smart, Not Hard</h4>
+                        <p>Garrisoning generates the points we need to win, but it must be done efficiently.</p>
+                        <ul>
+                            <li><strong class="text-amber-400">Target Specific Slots:</strong> When attacking a territory with multiple garrison slots, you <strong>MUST</strong> click on the specific enemy slot you want to hit before pressing the "Attack" button. This is critical for focused attacks.</li>
+                            <li><strong class="text-amber-400">Prioritize High-Value Slots:</strong> When we take a territory, our goal is to occupy all available slots. Always prioritize garrisoning the higher-value spots first (e.g., the 2 pts/min spot before the 1 pt/min spot).</li>
+                            <li><strong class="text-amber-400">Do NOT Over-Garrison:</strong> When we clear an enemy spot, <strong>ideally only 1 player</strong> is needed to garrison it initially (<strong>2 players is the absolute max</strong>). An R4/R5 will monitor the score.</li>
+                            <li><strong class="text-amber-400">Why?</strong> Over-filling a spot wastes your attempts and creates a huge target for strong enemies to get a lot of Merit from. We must starve them of easy points.</li>
+                            <li><strong class="text-amber-400">Reinforce on Command:</strong> We will call for more defenders <strong>ONLY</strong> if necessary.</li>
+                        </ul>
+                        <h4>4. Winning the Long War: Save Your Strength</h4>
+                        <p>This is a long event. Saving attempts is a winning strategy.</p>
+                        <ul>
+                            <li><strong class="text-amber-400">When to Save:</strong> If we have a comfortable lead on all important territories near the daily reset, <strong>SAVE your remaining attempts!</strong></li>
+                            <li><strong class="text-amber-400">Why it Matters:</strong> Attempts can stack up to <strong>15 max</strong>. Saved attempts are our secret weapon for tougher fights later in the season against new opponents. Don't waste them for a few extra points if we're already winning.</li>
+                        </ul>
+                        <p class="mt-4">Discipline, coordination, and smart decisions will lead us to victory. Let's dominate this season together!</p>
+                    </div>
+                `
             }
         ];
         const guideContainer = document.getElementById('guide-accordions');
