--- a/index.html
+++ b/index.html
@@ -215,6 +215,43 @@ const powerPlaySchedule = {
 
 const oilClashDailyPlans = [
     {
+        date: "September 9, 2025",
+        plan: `
+            <style>
+                .plan-section h4 { font-family: 'Luckiest Guy', cursive; color: #34d399; margin-top: 1rem; margin-bottom: 0.5rem; font-size: 1.1em;}
+                .plan-section p { margin-bottom: 0.5rem; }
+                .plan-section ul { list-style-position: inside; padding-left: 1rem; }
+                .plan-section li { margin-bottom: 0.25rem; }
+                .plan-section strong { color: #facc15; }
+            </style>
+            <div class="plan-section text-gray-300">
+                <h4>PRIORITY 1: MAIN TARGETS (800, 480 & 320 Oil)</h4>
+                <p>Primary goal is to secure these high-value rigs.</p>
+                <ul>
+                    <li><strong>XL-Rig 08:</strong> Uncontested. Only 1 player garrison in one of the 4 available slots.</li>
+                    <li><strong>XL-Rig 04/07:</strong> Smart Garrisoning. Max 1 player per slot (4 slots).</li>
+                    <li><strong>L-Rig 06/08/12 & M-Rig 08:</strong> Smart Garrison. Max 1 player per spot.</li>
+                </ul>
+                <h4>PRIORITY 2: DEFENSE & SECURE (300 Oil)</h4>
+                <p>Secondary objectives.</p>
+                <ul>
+                    <li><strong>M-Lair 18/22/23/31:</strong> DEFEND against FRA. Starting goal is 300.0K points.</li>
+                </ul>
+                <h4>PRIORITY 3: SUPPORT (240 & 160 Oil)</h4>
+                <ul>
+                    <li><strong>S-Rig 19/27/28/31/32:</strong> Smart Garrison. Only 1 player per slot (2 slots = 2 players max in each S-Rig).</li>
+                    <li><strong>S-Lair 05:</strong> DEFEND against DEU. Our starting goal is 100.0K points.</li>
+                </ul>
+                <h4>DO NOT ATTACK: STRATEGIC BAIT (80 Oil)</h4>
+                <p>Let enemies waste attempts on these low-value territories. DO NOT ENGAGE.</p>
+                <ul>
+                    <li><strong>XS-Lair 54/55/60/64:</strong> Let FRA take them.</li>
+                    <li><strong>XS-Lair 35/40/43/44:</strong> Let DEU take them.</li>
+                </ul>
+            </div>
+        `
+    },
+    {
         date: "September 8, 2025",
         plan: `
             <style>
