--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ const oilClashDailyPlans = [
                 <ul>
                     <li><strong>XL-Rig 08:</strong> Uncontested. Only 1 player garrison in one of the 4 available slots.</li>
                     <li><strong>XL-Rig 04/07:</strong> Smart Garrisoning. Max 1 player per slot (4 slots).</li>
-                    <li><strong>L-Rig 06/08/12 & M-Rig 08:</strong> Smart Garrison. Max 1 player per spot.</li>
+                    <li><strong>L-Rig 06/08/12 & M-Rig 08:</strong> Smart Garrison. Max 1 player per slot.</li>
                 </ul>
                 <h4>PRIORITY 2: DEFENSE & SECURE (300 Oil)</h4>
                 <p>Secondary objectives.</p>
