--- a/index.html
+++ b/index.html
@@ -215,6 +215,50 @@ const powerPlaySchedule = {
 
 const oilClashDailyPlans = [
     {
+        date: "September 10, 2025",
+        plan: `
+            <style>
+                .plan-section h4 { font-family: 'Luckiest Guy', cursive; color: #34d399; margin-top: 1rem; margin-bottom: 0.5rem; font-size: 1.1em;}
+                .plan-section p { margin-bottom: 0.5rem; }
+                .plan-section ul { list-style-position: inside; padding-left: 1rem; }
+                .plan-section li { margin-bottom: 0.25rem; }
+                .plan-section strong { color: #facc15; }
+                .plan-section .oil-value { color: #a5f3fc; font-weight: 600; }
+            </style>
+            <div class="plan-section text-gray-300">
+                <h4>PRIORITY 1: MAIN TARGETS (<span class="oil-value">800, 480 & 320</span> Oil)</h4>
+                
+                <p><strong><span class="oil-value">800 Oil:</span></strong></p>
+                <ul>
+                    <li><strong>XL-Rig 04/07:</strong> Smart Garrisoning. Max 1 player per slot (4 slots). Check each slot when occupied by opponents. If the defender is weaker than your strongest squads, you can select the slot and attack it. Prioritize 2 pts/min slots first if possible.</li>
+                </ul>
+
+                <p><strong><span class="oil-value">480 Oil:</span></strong></p>
+                <ul>
+                    <li><strong>L-Rig 06:</strong> Smart Garrison. Max 1 player per slot (3 slots).</li>
+                </ul>
+
+                <p><strong><span class="oil-value">320 Oil:</span></strong></p>
+                <ul>
+                    <li><strong>M-Rig 04/07:</strong> Uncontested territory. ONLY 1 player garrison in one of the 3 available slots. Send your weakest squad and keep strong ones for active fights against DuB and UKR in XL-Rigs.</li>
+                </ul>
+
+                <h4>PRIORITY 2: DEFENSE & SECURE (<span class="oil-value">300 & 240</span> Oil)</h4>
+                <ul>
+                    <li><strong>M-Lair 18/22/23/31/33:</strong> (<span class="oil-value">300 Oil</span>) DEFEND against opponents. Starting goal is 300.0K points.</li>
+                    <li><strong>S-Rig 21/25/29/31/32:</strong> (<span class="oil-value">240 Oil</span>) Smart Garrison. Only 1 player per slot (2 slots = 2 players max in each S-Rig).</li>
+                </ul>
+
+                <h4>DO NOT ATTACK: STRATEGIC BAIT (<span class="oil-value">160 & 80</span> Oil)</h4>
+                <p>Let enemies waste attempts on these low-value territories. DO NOT ENGAGE.</p>
+                <ul>
+                    <li><strong>S-Lair 05:</strong> (<span class="oil-value">160 Oil</span>) Let opponents take it.</li>
+                    <li><strong>XS-Lair 35/40/43/44/54/55/57/60/64:</strong> (<span class="oil-value">80 Oil</span>) Let opponents take them.</li>
+                </ul>
+            </div>
+        `
+    },
+    {
         date: "September 9, 2025",
         plan: `
             <style>
@@ -340,7 +384,7 @@ const oilClashDailyPlans = [
                     <li><strong>vs FRA (2 Players Max):</strong> S-Rig 31, S-Rig 32.</li>
                 </ul>
                 <h4>IMPORTANT ORDERS</h4>
-                <p>This is the initial plan. Do not rush your attempts as we will adapt during the day. FullPistola has command if I am offline.</p>
+                <p>This is the initial plan. Do not rush your attempts as we will adapt during the day. FullPPistola has command if I am offline.</p>
             </div>
         `
     }
