--- a/index.html
+++ b/index.html
@@ -215,6 +215,37 @@ const powerPlaySchedule = {
 
 const oilClashDailyPlans = [
     {
+        date: "September 11, 2025",
+        plan: `
+            <style>
+                .plan-section h4 { font-family: 'Luckiest Guy', cursive; color: #34d399; margin-top: 1rem; margin-bottom: 0.5rem; font-size: 1.1em;}
+                .plan-section p { margin-bottom: 0.5rem; }
+                .plan-section ul { list-style-position: inside; padding-left: 1rem; }
+                .plan-section li { margin-bottom: 0.25rem; }
+                .plan-section strong { color: #facc15; }
+                .plan-section .oil-value { color: #a5f3fc; font-weight: 600; }
+            </style>
+            <div class="plan-section text-gray-300">
+                <h4>Positions to Keep/Attack/Defend at All Costs</h4>
+                <ul>
+                    <li><span class="oil-value">(1600 Oil)</span> <strong>XXL-Rig 01</strong></li>
+                    <li><span class="oil-value">(800 Oil)</span> <strong>XL-Rig 03/04/07</strong></li>
+                    <li><span class="oil-value">(480 Oil)</span> <strong>L-Rig 06/08</strong></li>
+                    <li><span class="oil-value">(320 Oil)</span> <strong>M-Rig 08</strong></li>
+                    <li><span class="oil-value">(300 Oil)</span> <strong>M-Lair 15/23</strong></li>
+                    <li><span class="oil-value">(240 Oil)</span> <strong>S-Rig 21/25/29</strong></li>
+                </ul>
+                <h4>General Orders</h4>
+                <ul>
+                    <li>If you can one-shot a defender in any slot, go for it. Every minute counts.</li>
+                    <li><strong>DO NOT ATTACK</strong> any territory that is not on the list above.</li>
+                    <li>If you think another target should be attacked, you <strong>MUST</strong> ask for confirmation from <strong>FullPistola, Dante, or Syfler</strong> first.</li>
+                    <li>With 3 days left, our focus is on these highest-value territories.</li>
+                </ul>
+            </div>
+        `
+    },
+    {
         date: "September 10, 2025",
         plan: `
             <style>
